--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -329,7 +329,7 @@
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
-	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ShowOldBindingUI": "Show Old Binding UI",
 	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
 	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
 	"Settings_ActiveControllerBinding": "Active Controller Binding",
